Resolve contents overlapping issue in detail page

--- a/static/portfolio/portfolio_detail.css
+++ b/static/portfolio/portfolio_detail.css
@@ -23,7 +23,6 @@ code {
 .portfolio_title {
     font-size: 400%;
     padding: 3% 0%;
-    border-bottom: 1px solid darkgray;
 }
 
 .portfolio_contents {
